# log-data-masking

./: Execution Instructions.txt  README.md
Files/: Defs.txt  log.txt  maskedLog.txt  maskingScript.txt  script.txt
Files/Examples/Example1/: log.txt  script.txt
LDAL/: .gitignore  CMakeLists.txt
LDAL/Core/: CPlusPlusEntry.cpp  Command.cpp  Command.h  DefFileReader.cpp  DefFileReader.h  Defs.h  ExecutionTemplate.cpp  ExecutionTemplateList.cpp  MetaData.h  Node.h  ScriptReader.cpp  Tests.cpp  Tests.h  TypeDefs.h
LDAL/Core/LDEL/: ELBlockTemplate.cpp  ELBlockTemplateParser.cpp  ELFillerString.cpp  ELFloat.cpp  ELInterpretter.cpp  ELInterpretter.h  ELInterpretterJSON.cpp  ELJSON.cpp  ELLogFileFilter.cpp  ELLogFileFilter.h  ELNodeWrapperJSON.cpp  ELParser.cpp  ELSequenceVar.cpp  ELString.cpp  ELVariable.cpp  ELVariable.h
LDAL/Core/TestCases/files/: TestCustomStrFilterShorthandScriptDefs.txt  TestFilterSubtreeScriptDefs.txt  TestInnerCountScriptDefs.txt  TestListGroupByScriptDefs.txt  TestLoadFromCodeLibraryScriptDefs.txt  TestStringEnclosureScriptDefs.txt
LDAL/FlexibleComputerLanguage/: DbConnection.h  Defs.txt  LogJsonParser.cpp  LogJsonParser.h  MysqlConnector.cpp  MysqlConnector.h  QueryExecuter.cpp  main.cpp  maskedJSON.json  resultJSON.json
LDAL/FlexibleComputerLanguage/Masking/: maskfunction.txt
substitutiondbtables/: address.csv  citycode.csv  fnamefemale.csv  fnamemale.csv  fnameunisex.csv  lastname.csv  postalcode.csv
